# Page-Loader

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
page_loader/: __init__.py  create_directory.py  download.py  known_error.py  naming.py  parsing.py  save_page.py  supporting_functions.py
page_loader/scripts/: page_loader.py  pageloader.py
pageloader/: download.py  get_correct_name.py  supporting_functions.py
pageloader/scripts/: page_loader.py
tests/: test_create_directory.py  test_download.py  test_naming.py  test_save_page.py
tests/fixture/: ru-hexlet-io-courses.html
tests/fixture/downloaded_html_files/: inner_link.html
