[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ilnarkz <ilnar-16_04@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
requests_mock = "^1.9.3"

[tool.poetry.scripts]
page-loader = 'pageloader.scripts.page_loader:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
